--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
-    "gh-pages": "^4.0.0",
-    "node-sass": "^8.0.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-router": "^6.6.2",
-    "react-router-dom": "^6.6.2",
-    "react-scripts": "4.0.3",
+    "gh-pages": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.7.0",
+    "react-router-dom": "6.7.0",
+    "react-scripts": "5.0.1",
     "sass": "^1.57.1"
   },
   "scripts": {
@@ -30,5 +29,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://aniabrakowska.github.io/przepisownik/"
+  "homepage": "https://aniabrakowska.github.io/"
 }
