--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://aniabrakowska.github.io/"
+  "homepage": "https://aniabrakowska.github.io/przepisownik"
 }
